fixed #8878 - default back to dark mode

--- a/tabby-core/src/components/welcomeTab.component.scss
+++ b/tabby-core/src/components/welcomeTab.component.scss
@@ -6,3 +6,8 @@
     max-height: 100%;
     overflow-y: auto;
 }
+
+.tabby-logo {
+    width: 60px;
+    height: 60px;
+}
